<?xml version="1.0" encoding="utf-8"?>

<resources>

    <string name="app_name">Hoard</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="oard"><i>oard</i></string>

    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>

    <!-- Dialog Titles and Messages -->
    <string name="dialog_fail_register_title">Failed to Register</string>
    <string name="dialog_fail_login_title">Failed to Login</string>
    <string name="dialog_fail_register_message">We were not able to register you. Please try again.</string>
    <string name="dialog_fail_login_message">We were not able to log you in. Please try again.</string>

    <string name="dialog_fail_change_password_title">Failed to Change Password</string>
    <string name="dialog_fail_change_password_message">We were not able to change your password. Please try again.</string>

    <string name="login">Sign In</string>
    <string name="register">Register</string>
    <string name="forgot_password"><u>Forgot Password</u></string>

    <!-- Hints -->
    <string name="hint_username">Username</string>
    <string name="hint_email">Email</string>
    <string name="hint_old_password">Old Password</string>
    <string name="hint_new_password">New Password</string>
    <string name="hint_password">Password</string>
    <string name="hint_confirm_password">Confirm Password</string>

    <!-- Validation -->
    <string name="validation_email_error">Invalid Email</string>
    <string name="validation_password_error">Invalid Password</string>
    <string name="validation_confirmation_password_error">Passwords don\'t match</string>

    <!-- Notification -->
    <string name="notification_already">You\'re already signed in</string>
    <string name="notification_signin">You\'ve successfully signed in</string>
    <string name="notification_register">You\'ve successfully registered</string>
    <string name="notification_no_connection">No internet connection, no hoarding</string>

    <!-- Main Menu -->
    <string name="menu_item_profile">Profile</string>
    <string name="menu_item_logout">Log Out</string>

    <!-- Profile -->
    <string name="profile_name">Settings</string>

    <!-- API Request Stuff -->
    <string name="timeout">10000</string>
    <string name="server_url">http://178.62.105.68:8081/</string>
    <string name="sigin_url">api/users/signin-app</string>
    <string name="register_url">api/users/register</string>
    <string name="favorites_url">api/products/getFavorites</string>
    <string name="products_url">api/products/viewProducts</string>
    <string name="preferences_products_url">api/preferences</string>
    <string name="viewed_product_url">/api/viewed/</string>
    <string name="remove_product_from_favorites_url">api/products/removeProductFromFavorites/</string>
    <string name="add_product_to_favorites_url">api/products/addToFavorites/</string>
    <string name="change_password_url">api/users/changePassword</string>
    <string name="forgot_password_url">api/users/forgotPassword/</string>
    <string name="product_images_url">images/products/</string>

</resources>
