<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/red"
    android:focusableInTouchMode="true"
    android:orientation="vertical">

    <Button
        android:id="@+id/signin_register_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:background="?android:attr/selectableItemBackground"
        android:contentDescription="@string/app_name"
        android:layout_alignParentTop="true"
        android:layout_alignRight="@+id/signin_email"
        android:layout_alignEnd="@+id/signin_email" />

    <EditText
        android:id="@+id/signin_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_margin="10dp"
        android:padding="5dp"
        android:background="@drawable/textedit"
        android:textColor="@color/black"
        android:textCursorDrawable="@null"
        android:hint="@string/hint_email"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/signin_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/signin_email"
        android:layout_margin="10dp"
        android:padding="5dp"
        android:background="@drawable/textedit"
        android:textColor="@color/black"
        android:textCursorDrawable="@null"
        android:hint="@string/hint_password"
        android:inputType="textPassword"
        android:imeOptions="actionDone" />

    <TextView
        android:id="@+id/signin_recovery"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/signin_password"
        android:layout_margin="10dp"
        android:padding="5dp"
        android:gravity="center"
        android:text="@string/forgot_password"
        android:textColor="@color/black"
        android:hint="@string/hint_password" />

    <ImageButton
        android:id="@+id/signin_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/signin_recovery"
        android:layout_margin="10dp"
        android:padding="5dp"
        android:src="@drawable/ic_action_accept"
        android:background="?android:attr/selectableItemBackground"
        android:contentDescription="@string/app_name" />

    <ProgressBar
        android:id="@+id/signin_progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/signin_password"
        android:visibility="gone" />

    <TextView
        android:id="@+id/signin_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/signin_email"
        android:layout_centerHorizontal="true"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="60sp"
        android:text="@string/login" />

</RelativeLayout>